fix: unmodified pool-list when sorting and searching